WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
274934
Try resetting the GPU process if rendering commands time out
https://bugs.webkit.org/show_bug.cgi?id=274934
Summary
Try resetting the GPU process if rendering commands time out
Matt Woodrow
Reported
2024-05-30 16:58:49 PDT
We have a few issues where rendering commands start timing out, and aren't being processed by the GPU. Ideally we'll fix all the root cause issues, but in the interim it is probably worth using a restart of the GPUP to get out of this state.
rdar://125143181
Attachments
Add attachment
proposed patch, testcase, etc.
Matt Woodrow
Comment 1
2024-05-30 17:02:22 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/29342
Kimmo Kinnunen
Comment 2
2024-06-06 09:47:32 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/29581
EWS
Comment 3
2024-06-07 14:09:07 PDT
Committed
279833@main
(3dcfec1cff82): <
https://commits.webkit.org/279833@main
> Reviewed commits have been landed. Closing PR #29581 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug