Try resetting the GPU process if rendering commands time out. https://bugs.webkit.org/show_bug.cgi?id=274934 <rdar://125143181>

Reviewed by NOBODY (OOPS!).

We have a few issues where rendering commands start timing out, and aren't being processed
by the GPU.

Ideally we'll fix all the root cause issues, but in the interim it is probably worth using a
restart of the GPUP to get out of this state

This is restricted to only once per WebProcess, to limit the capabilities of an untrusted
WebProcess.

* Source/WebKit/UIProcess/WebProcessProxy.cpp:
(WebKit::WebProcessProxy::terminateGPUProcess):
* Source/WebKit/UIProcess/WebProcessProxy.h:
* Source/WebKit/UIProcess/WebProcessProxy.messages.in:
* Source/WebKit/WebProcess/GPU/GPUProcessConnection.cpp:
(WebKit::GPUProcessConnection::notifyMessageDidTimeout):
* Source/WebKit/WebProcess/GPU/GPUProcessConnection.h:
* Source/WebKit/WebProcess/GPU/graphics/RemoteDisplayListRecorderProxy.cpp:
(WebKit::RemoteDisplayListRecorderProxy::send):
* Source/WebKit/WebProcess/GPU/graphics/RemoteRenderingBackendProxy.cpp:
(WebKit::RemoteRenderingBackendProxy::~RemoteRenderingBackendProxy):
(WebKit::RemoteRenderingBackendProxy::ensureGPUProcessConnection):
(WebKit::RemoteRenderingBackendProxy::send):
(WebKit::RemoteRenderingBackendProxy::sendSync):
(WebKit::RemoteRenderingBackendProxy::disconnectGPUProcess):
(WebKit::RemoteRenderingBackendProxy::notifyMessageDidTimeout):
* Source/WebKit/WebProcess/GPU/graphics/RemoteRenderingBackendProxy.h:
* Source/WebKit/WebProcess/WebProcess.cpp:
(WebKit::WebProcess::terminateGPUProcess):
* Source/WebKit/WebProcess/WebProcess.h: